--- a/blocks/auth/auth.html
+++ b/blocks/auth/auth.html
@@ -18,7 +18,7 @@
 
 <script src="../../lib/md5.js"></script>
 <script src="../../lib/jquery-1.8.3.min.js"></script>
-<script src="../../lib/lastfm.js"></script>
-<script type="text/javascript" src="./auth.js"></script>
+<script src="../lastfm-api/lastfm-api.js"></script>
+<script src="./auth.js"></script>
 </body>
 </html>
