--- a/blocks/background/background.html
+++ b/blocks/background/background.html
@@ -3,7 +3,7 @@
   <meta http-equiv="content-type" content="text/html; charset=utf8"/>
   <script src="../../lib/jquery-1.8.3.min.js"></script>
   <script src="../../lib/md5.js"></script>
-  <script src="../../lib/lastfm.js"></script>
+  <script src="../lastfm-api/lastfm-api.js"></script>
   <script type="text/javascript" src="./background.js"></script>
 </head>
 
