--- a/blocks/background/background.html
+++ b/blocks/background/background.html
@@ -4,7 +4,8 @@
   <script src="../../lib/jquery-1.8.3.min.js"></script>
   <script src="../../lib/md5.js"></script>
   <script src="../lastfm-api/lastfm-api.js"></script>
-  <script type="text/javascript" src="./background.js"></script>
+  <script src="../analytics/analytics.js"></script>
+  <script src="./background.js"></script>
 </head>
 
 <body>
