Move md5 to block. Extract copy bash script

--- a/blocks/auth/auth.html
+++ b/blocks/auth/auth.html
@@ -16,7 +16,7 @@
 </div>
 
 
-<script src="../../lib/md5.js"></script>
+<script src="../md5/md5.js"></script>
 <script src="../lastfm-api/lastfm-api.js"></script>
 <script src="./auth.js"></script>
 </body>
