--- a/blocks/background/background.html
+++ b/blocks/background/background.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf8"/>
-  <script src="../../lib/md5.js"></script>
+  <script src="../md5/md5.js"></script>
   <script src="../lastfm-api/lastfm-api.js"></script>
   <script src="../analytics/analytics.js"></script>
   <script src="./background.js"></script>
