Refactoring for auth

--- a/blocks/background/background.html
+++ b/blocks/background/background.html
@@ -3,6 +3,7 @@
   <meta http-equiv="content-type" content="text/html; charset=utf8"/>
   <script src="../md5/md5.js"></script>
   <script src="../lastfm-api/lastfm-api.js"></script>
+  <script src="../lastfm-api/lastfm-api__config.js"></script>
   <script src="../analytics/analytics.js"></script>
   <script src="./background.js"></script>
 </head>
