Background script refactoring

--- a/blocks/background/background.html
+++ b/blocks/background/background.html
@@ -2,9 +2,13 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf8"/>
   <script src="../md5/md5.js"></script>
-  <script src="../lastfm-api/lastfm-api.js"></script>
+  <script src="../lastfm-api/lastfm-api__client.js"></script>
   <script src="../lastfm-api/lastfm-api__config.js"></script>
+  <script src="../lastfm-api/lastfm-api.js"></script>
   <script src="../analytics/analytics.js"></script>
+  <script src="../content/content__messages.js"></script>
+  <script src="./background__auth.js"></script>
+  <script src="./background__actions.js"></script>
   <script src="./background.js"></script>
 </head>
 
