--- a/blocks/auth/auth.html
+++ b/blocks/auth/auth.html
@@ -17,7 +17,7 @@
 
 
 <script src="../md5/md5.js"></script>
-<script src="../lastfm-api/lastfm-api.js"></script>
+<script src="../lastfm-api/lastfm-api__client.js"></script>
 <script src="../lastfm-api/lastfm-api__config.js"></script>
 <script src="../analytics/analytics.js"></script>
 <script src="./auth.js"></script>
