--- a/blocks/auth/auth.html
+++ b/blocks/auth/auth.html
@@ -16,7 +16,7 @@
 </div>
 
 
-<script src="../../node_modules/js-md5/build/md5.js"></script>
+<script src="../../node_modules/js-md5/build/md5.min.js"></script>
 <script src="../lastfm-api/lastfm-api__client.js"></script>
 <script src="../lastfm-api/lastfm-api__config.js"></script>
 <script src="../analytics/analytics.js"></script>
