--- a/blocks/background/background.html
+++ b/blocks/background/background.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf8"/>
-  <script src="../../node_modules/js-md5/build/md5.js"></script>
+  <script src="../../node_modules/js-md5/build/md5.min.js"></script>
   <script src="../lastfm-api/lastfm-api__client.js"></script>
   <script src="../lastfm-api/lastfm-api__config.js"></script>
   <script src="../lastfm-api/lastfm-api.js"></script>
