--- a/blocks/auth/auth.html
+++ b/blocks/auth/auth.html
@@ -15,7 +15,7 @@
   <h3 id="message" class="auth__message"></h3>
 </div>
 
-
+<script src="../namespace/namespace.js"></script>
 <script src="../../node_modules/js-md5/build/md5.min.js"></script>
 <script src="../lastfm-api/lastfm-api__client.js"></script>
 <script src="../lastfm-api/lastfm-api__config.js"></script>
