Use bus on content script

--- a/blocks/background/background.html
+++ b/blocks/background/background.html
@@ -8,6 +8,7 @@
   <script src="../lastfm-api/lastfm-api__config.js"></script>
   <script src="../lastfm-api/lastfm-api.js"></script>
   <script src="../analytics/analytics.js"></script>
+  <script src="../bus/bus__background.js"></script>
   <script src="../content/content__messages.js"></script>
   <script src="./background__auth.js"></script>
   <script src="./background__actions.js"></script>
