add user image to auth page

--- a/blocks/auth/auth.html
+++ b/blocks/auth/auth.html
@@ -12,7 +12,7 @@
 <body>
   <div class="auth">
     <div class="user">
-      <div class="user__img">
+      <div id="userImage" class="user__img">
         <div id="loader" class="loader"></div>
       </div>
       <span id="userName" class="user__name"></span>
