the first implementation of custom console.log()

--- a/blocks/background/background.html
+++ b/blocks/background/background.html
@@ -4,6 +4,7 @@
 
   <script src="../namespace/namespace.js"></script>
   <script src="../../components/md5.min.js"></script>
+  <script src="../log/log.js"></script>
   <script src="../lastfm-api/lastfm-api__client.js"></script>
   <script src="../lastfm-api/lastfm-api__config.js"></script>
   <script src="../lastfm-api/lastfm-api.js"></script>
