--- a/blocks/options/options.html
+++ b/blocks/options/options.html
@@ -1,19 +1,41 @@
 <!DOCTYPE html>
-
 <html>
-  <head>
-    <meta charset="utf-8">
-  </head>
 
-  <body>
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="./options.css" />
+</head>
 
-    <form>
-        <label>Border color<input type="text" id="color" ></label>
-        <button type="submit">Save</button>
-    </form>
+<body>
 
-    <script src="options.js"></script>
+  <div class="options">
+    <div class="options__title">Main Settings</div>
+    <div class="options__panel">
+      <div class="options__label">Indicators</div>
+      <div class="options__row">
+        <label class="control control--checkbox">Show Twitter share icon
+          <input id="twitter" type="checkbox" checked="" />
+          <div class="control__indicator"></div>
+        </label>
+      </div>
+      <div class="options__row">
+        <label class="control control--checkbox">Show equalizer
+          <input id="eq-show" type="checkbox" checked="" />
+          <div class="control__indicator"></div>
+        </label>
+      </div>
+      <div class="options__row">
+        <label class="control control--checkbox">Show equalizer animation
+          <input id="eq-anim" type="checkbox" checked="" />
+          <div class="control__indicator"></div>
+        </label>
+      </div>
+      <button id="save">Save</button>
+    </div>
+  </div>
 
-  </body>
+  <script src="options.js"></script>
+
+</body>
 
 </html>
