implemented showing/hiding some of indicators

--- a/blocks/options/options.html
+++ b/blocks/options/options.html
@@ -19,14 +19,8 @@
         </label>
       </div>
       <div class="options__row">
-        <label class="control control--checkbox">Show equalizer
-          <input id="eq-show" type="checkbox" checked="" />
-          <div class="control__indicator"></div>
-        </label>
-      </div>
-      <div class="options__row">
-        <label class="control control--checkbox">Show equalizer animation
-          <input id="eq-anim" type="checkbox" checked="" />
+        <label class="control control--checkbox">Show equalizer in topbar
+          <input id="eqShowTopbar" type="checkbox" checked="" />
           <div class="control__indicator"></div>
         </label>
       </div>
