some style changes & setting default values for options

--- a/blocks/options/options.html
+++ b/blocks/options/options.html
@@ -9,7 +9,7 @@
 <body>
 
   <div class="options">
-    <div class="options__title">Main Settings</div>
+    <div class="options__title">VK Scrobbler Settings</div>
     <div class="options__panel">
       <div class="options__label">Indicators</div>
       <div class="options__row">
@@ -24,7 +24,9 @@
           <div class="control__indicator"></div>
         </label>
       </div>
-      <button id="save">Save</button>
+      <div class="options__footer">
+        <button class="btn" id="save">Save</button>
+      </div>
     </div>
   </div>
 
