--- a/blocks/options/options.html
+++ b/blocks/options/options.html
@@ -31,6 +31,8 @@
     </div>
   </div>
 
+  <script src="../namespace/namespace.js"></script>
+  <script src="options-handlers.js"></script>
   <script src="options.js"></script>
 
 </body>
