Removed .innerHTML in auth

--- a/blocks/auth/auth.html
+++ b/blocks/auth/auth.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div class="auth">
+  <div class="auth" id="auth">
     <div class="user">
       <div id="userImage" class="user__img">
         <div id="loader" class="loader"></div>
