Great code cleanup

--- a/blocks/options/options.html
+++ b/blocks/options/options.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="./__styles/vars.css" />
+  <link rel="stylesheet" type="text/css" href="./__styles/checkbox.css" />
   <link rel="stylesheet" type="text/css" href="./__styles/options.css" />
 </head>
 
@@ -13,20 +15,22 @@
       <div class="options__label">Indicators</div>
       <div id="optionsRows">
         <div class="options__row">
-          <label class="control control--checkbox">Show Twitter share icon
+          <label class="control control--checkbox">
             <input id="twitter" type="checkbox" checked="" />
             <div class="control__indicator"></div>
+            Show Twitter share icon
           </label>
         </div>
         <div class="options__row">
-          <label class="control control--checkbox">Show equalizer in topbar
+          <label class="control control--checkbox">
             <input id="eqShowTopbar" type="checkbox" checked="" />
             <div class="control__indicator"></div>
+            Show equalizer in topbar
           </label>
         </div>
       </div>
       <div class="options__footer">
-        <button class="btn" id="save">Save</button>
+        <button class="options__button" id="save">Save</button>
       </div>
     </div>
   </div>
