--- a/blocks/auth/auth.html
+++ b/blocks/auth/auth.html
@@ -22,6 +22,7 @@
   </div>
 
   <script src="../namespace/namespace.js"></script>
+  <script src="../options/options-handlers.js"></script>
   <script src="../log/log.js"></script>
   <script src="../../components/md5.min.js"></script>
   <script src="../lastfm-api/lastfm-api__client.js"></script>
