--- a/blocks/options/options.html
+++ b/blocks/options/options.html
@@ -28,6 +28,14 @@
             Show equalizer in topbar
           </label>
         </div>
+        <div class="options__label">Privacy</div>
+        <div class="options__row">
+          <label class="control control--checkbox">
+            <input id="gaEnabled" type="checkbox" checked="" />
+            <div class="control__indicator"></div>
+            Enable Google Analytics
+          </label>
+        </div>
         <div class="options__label">For developers</div>
         <div class="options__row">
           <label class="control control--checkbox">
